--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,6 @@
   <button type="button" class="btn btn-dark">Dark</button>
   <button type="button" class="btn btn-light">Light</button>
   <button type="button" class="btn btn-link">Link</button>  
+   <button type="button" class="btn btn-link">Link</button>  
     
 </div>
