--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-encabezado></app-encabezado>
 <br><br>
-<app-pagina1></app-pagina1>
+<router-outlet></router-outlet>
 <br>
 <br><br>
-<app-pagina2></app-pagina2>
