--- a/src/app/encabezado/encabezado.component.html
+++ b/src/app/encabezado/encabezado.component.html
@@ -3,7 +3,7 @@
 	
 	<button type="button" [routerLink]="['../paginas/pagina1/pagina1.component.html']" routerLinkActive="router-link-active"  class="btn btn-primary">pagina1</button>
 	<button type="button" routerLink = "pagina2" routerLinkActive="router-link-active"   class="btn btn-secondary">Pagina2</button>
-	<button type="button" class="btn btn-success">Success</button>
+	<button type="button" [routerLink]="['pagina2']" routerLinkActive="router-link-active"  class="btn btn-success">pagina2</button>
 	<button type="button" class="btn btn-info">Info</button>
 	<button type="button" class="btn btn-warning">Warning</button>
 	<button type="button" class="btn btn-danger">Danger</button>
